# Proyecto_MlFlow

./: .gitattributes  .gitignore  README.md
Proyecto_ml/: .gitignore  ModeloMLFlow.py  pyproject.toml
Proyecto_ml/graficas/: model_comparison_results.csv
Proyecto_ml/mlruns/0/: meta.yaml
Proyecto_ml/mlruns/0/538929fee32740fca1e467b25ec1a256/: meta.yaml
Proyecto_ml/mlruns/103652190696652823/: meta.yaml
Proyecto_ml/mlruns/103652190696652823/0b56002a51ad44988c9c37adf5104b49/: meta.yaml
Proyecto_ml/mlruns/103652190696652823/3f6f6bbe86784d26a63aff2417efdd1d/: meta.yaml
Proyecto_ml/mlruns/103652190696652823/f0ef435180a64b50be63b236e5b6a1df/: meta.yaml
Proyecto_ml/mlruns/295008760049364005/: meta.yaml
Proyecto_ml/mlruns/295008760049364005/41a1cf292393434393a5c692d27537da/: meta.yaml
Proyecto_ml/modelos/distilbert/: model.safetensors
Proyecto_ml/results/bert_mini/checkpoint-125/: config.json  model.safetensors  optimizer.pt  trainer_state.json
Proyecto_ml/results/bert_mini/checkpoint-250/: model.safetensors  optimizer.pt  trainer_state.json
Proyecto_ml/results/checkpoint-125/: model.safetensors  optimizer.pt  trainer_state.json
Proyecto_ml/results/checkpoint-250/: model.safetensors  optimizer.pt  trainer_state.json
Proyecto_ml/results/checkpoint-500/: model.safetensors  optimizer.pt  rng_state.pth  trainer_state.json
Proyecto_ml/results/distilbert/checkpoint-125/: model.safetensors  optimizer.pt  trainer_state.json
Proyecto_ml/results/distilbert/checkpoint-250/: optimizer.pt  trainer_state.json
(+108 files in other folders)
