[project]
name = "proyecto-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.20.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "xgboost>=2.1.4",
]
